// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/ProfileButtonPresenter  1`] = `
<button
  className="hig__top-nav__profile-action__button"
  onClick={undefined}
  type="button"
>
  <figure
    aria-label="Avatar for Wolfgang Pauli"
    className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--8"
  >
    <div
      aria-hidden="true"
      className="hig__avatarV2__initials"
    >
      WP
    </div>
  </figure>
</button>
`;

exports[`top-nav/presenters/ProfileButtonPresenter  2`] = `
<button
  className="hig__top-nav__profile-action__button"
  onClick={undefined}
  type="button"
>
  <figure
    aria-label="Avatar for Hans Hellmann"
    className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--3"
  >
    <div
      aria-hidden="true"
      className="hig__avatarV2__initials"
    >
      HH
    </div>
  </figure>
</button>
`;

exports[`top-nav/presenters/ProfileButtonPresenter  3`] = `
<button
  className="hig__top-nav__profile-action__button"
  onClick={[Function]}
  type="button"
>
  <figure
    aria-label="Avatar for Richard Feynman"
    className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--6"
  >
    <div
      className="hig__avatarV2__image-wrapper"
    >
      <img
        alt="Avatar image of Richard Feynman"
        className="hig__avatarV2__image"
        onError={[Function]}
        src="richard_phillips_feynman.png"
      />
    </div>
    <div
      aria-hidden="true"
      className="hig__avatarV2__initials"
    >
      RF
    </div>
  </figure>
</button>
`;
